src.3/objects/CorpDev_Account__c.object
<CustomObject>
    <label>CorpDev Account</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CorpDev Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Capital_Raised_M__c</fullName>
        <label>Capital Raised ($M)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Churn_Rate__c</fullName>
        <label>Churn Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Banker/Broker</fullName>
                </value>
                <value>
                    <fullName>Investment Firm</fullName>
                </value>
                <value>
                    <fullName>Legal Firm</fullName>
                </value>
                <value>
                    <fullName>Consulting Firm</fullName>
                </value>
                <value>
                    <fullName>Accounting Firm</fullName>
                </value>
                <value>
                    <fullName>Bank/Lender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Latest_Investment__c</fullName>
        <label>Date of Latest Investment</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EBITDA_M__c</fullName>
        <label>EBITDA ($M)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Markets_Detail__c</fullName>
        <label>End Markets Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Markets__c</fullName>
        <label>End Markets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Optometry/Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Primary Care</fullName>
                </value>
                <value>
                    <fullName>Hospitals</fullName>
                </value>
                <value>
                    <fullName>Urgent Care</fullName>
                </value>
                <value>
                    <fullName>Other Ambulatory</fullName>
                </value>
                <value>
                    <fullName>Veterinary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_SR_Relationship__c</fullName>
        <label>Existing SR Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Business Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FTE_Count__c</fullName>
        <label>FTE Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <label>Funding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bootstrapped</fullName>
                </value>
                <value>
                    <fullName>Seed</fullName>
                </value>
                <value>
                    <fullName>VC</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investors__c</fullName>
        <label>Investors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CorpDev_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Growth_Rate__c</fullName>
        <label>Revenue Growth Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_M__c</fullName>
        <label>Revenue ($M)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Year_Founded__c</fullName>
        <label>Year Founded</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>1999</fullName>
                </value>
                <value>
                    <fullName>1998</fullName>
                </value>
                <value>
                    <fullName>1997</fullName>
                </value>
                <value>
                    <fullName>1996</fullName>
                </value>
                <value>
                    <fullName>1995</fullName>
                </value>
                <value>
                    <fullName>1994</fullName>
                </value>
                <value>
                    <fullName>1993</fullName>
                </value>
                <value>
                    <fullName>1992</fullName>
                </value>
                <value>
                    <fullName>1991</fullName>
                </value>
                <value>
                    <fullName>1990</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>CorpDev_Date_Format</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Date_of_Latest_Investment__c ,&quot;^((0[1-9])|(1[0-2]))/[0-9]{4}$&quot;)) &amp;&amp;
NOT(ISBLANK( Date_of_Latest_Investment__c ))</errorConditionFormula>
        <errorDisplayField>Date_of_Latest_Investment__c</errorDisplayField>
        <errorMessage>Please use format MM/YYYY</errorMessage>
    </validationRules>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Type__c</columns>
        <columns>End_Markets__c</columns>
        <columns>FTE_Count__c</columns>
        <columns>Revenue_M__c</columns>
        <columns>Year_Founded__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>